--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,12 @@
   }
 }
 
+@layer base {
+  h2 {
+    @apply text-2xl lg:text-4xl font-bold;
+  }
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -24,10 +30,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
